[package]
name = "aliexpress-scraper"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "An aliexpress scraper using requests."
repository = "https://github.com/svrem/aliexpress-scraper"
documentation = "https://docs.rs/aliexpress-scraper"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.15"
serde = {version="1.0.158", features = ["derive"]}
serde_json = "1.0.94"
